Fix media-text overlap style padding bug

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Radical
 Author: Kelsey Barmettler
 Author URI: http://radicaladvantagedigital.com
 Description: A parent theme that provides a starting point for a totally rad website.
-Version: 1.2.87
+Version: 1.2.88
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -636,7 +636,7 @@ ul.wp-block-post-template {
 	row-gap: 0;
 }
 .wp-block-media-text.has-background  .wp-block-media-text__content {
-	padding: 2rem;
+	padding: 2rem !important;
 }
 /* media & text stack style */
 .wp-block-media-text.is-style-stack {
